kustom-webapp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebapp-ingress
  namespace: dev
  annotations:
    
spec:
  ingressClassName: nginx
  rules:
- host: argotest.wannes.stages-2024.axxes.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mywebapp
              port:
                number: 80
